[cs-ui] Demo App - fixed overflow issues in the navigation lists

--- a/cs-ui-demo/src/sass/_sidebar-list.scss
+++ b/cs-ui-demo/src/sass/_sidebar-list.scss
@@ -4,7 +4,8 @@
 	flex: 1;
 	background: var(--components-list-wrapper-bg);
 	transition: 0.4s;
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 	box-shadow: 0 1px 5px var(--cs-shadow-dark);
 	z-index: 2;
 	position: relative;
@@ -58,10 +59,6 @@
 			background-color: var(--prop-sidebar-bg);
 		}
 
-		.components-list-search {
-			visibility: hidden;
-		}
-
 		+ .components-preview {
 			transition: 0.4s;
 			width: 100%;
@@ -69,7 +66,7 @@
 	}
 
 	.components-list-search {
-		padding: 4rem 1rem 1rem;
+		margin: 4rem 1rem 1rem;
 		position: relative;
 		overflow: hidden;
 
@@ -77,8 +74,8 @@
 			position: absolute;
 			width: 1rem;
 			height: 1rem;
-			top: 4.75rem;
-			left: 2rem;
+			top: 0.75rem;
+			left: 1rem;
 			pointer-events: none;
 			fill: var(--cs-icon-sidebar-fill);
 		}
@@ -135,7 +132,8 @@
 
 	.components-list-inner {
 		flex: 1;
-		overflow: auto;
+		overflow-y: auto;
+		overflow-x: hidden;
 
 		&::-webkit-scrollbar {
 			width: 1rem;
